# Captcha-Detection-pro

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  Dockerfile  README.md  app.py  compose.model-mount.yaml  compose.yaml  labels.txt  pyproject.toml  requirements.txt  requirements2.txt  train.py
.github/workflows/: ci.yml
.streamlit/: config.toml
artifacts/: character_frequency.csv  dataset_report.json  duplicate_report.csv  split_manifest.csv
configs/: default.yaml  model-registry.yaml
docs/: OPERATIONS.md  TECHNICAL_DOCUMENTATION.md  architecture.md  dataset-card.md  interview-story.md  model-card.md  model-comparison.md  operations.md  upgrade-audit.md
reports/evaluation/: confidence_distribution.csv  evaluation_summary.json  failed_predictions.csv  model_comparison.csv  per_character_metrics.csv  per_position_metrics.csv
scripts/: __init__.py  audit_dataset.py  compare_models.py  evaluate_ctc_model.py  evaluate_model.py  train_ctc_experiment.py  verify_runtime.py
src/: __init__.py  data.py  inference.py  model.py  validation.py
src/cipherlens/: __init__.py  config.py  logging.py
src/cipherlens/api/: __init__.py  application.py  schemas.py  validation.py
src/cipherlens/data/: __init__.py  audit.py
src/cipherlens/evaluation/: __init__.py  calibration.py  comparison.py  ctc.py  metrics.py  reporting.py  runner.py
src/cipherlens/inference/: __init__.py  client.py
src/cipherlens/models/: __init__.py  ctc.py
tests/: test_app.py  test_core.py  test_training.py  test_validation.py
tests/compatibility/: __init__.py  test_production_artifact.py
tests/integration/: __init__.py  test_api.py
tests/unit/: __init__.py  test_api_client.py  test_api_monitoring.py  test_config.py  test_ctc_experiment.py  test_dataset_audit.py  test_evaluation.py  test_import_compatibility.py  test_model_comparison.py  test_reproducibility.py  test_runtime_contracts.py  test_training_pipeline.py
(+9 files in other folders)
