[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "cipherlens"
version = "0.1.0"
description = "Authorized fixed-length CAPTCHA-style text recognition with PyTorch"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "fastapi==0.139.2",
  "numpy==2.4.6",
  "pillow==12.2.0",
  "pydantic==2.13.4",
  "python-multipart==0.0.32",
  "pyyaml==6.0.3",
  "requests==2.34.2",
  "streamlit==1.58.0",
  "torch==2.12.1",
  "uvicorn==0.49.0",
]

[project.optional-dependencies]
dev = [
  "coverage[toml]>=7.9,<8",
  "httpx2==2.7.0",
  "mypy>=1.16,<2",
  "ruff>=0.12,<1",
  "types-PyYAML>=6.0.12,<7",
  "types-requests==2.33.0.20260712",
]
tracking = ["mlflow>=3.1,<4"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["cipherlens*"]

[tool.setuptools.package-data]
cipherlens = ["py.typed"]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["data", "models"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["cipherlens", "src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
files = ["src/cipherlens", "train.py", "scripts", "tests/unit"]
mypy_path = "src"
explicit_package_bases = true
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["PIL.*", "torch.*", "yaml"]
ignore_missing_imports = true

[tool.coverage.run]
branch = true
source = ["cipherlens"]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = true
